--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -12,5 +12,6 @@
 		<h4>Atención</h4>
 		<h5>Atención</h5>
 		<h6>Atención</h6>
+		es bastante interesante el uso del github y  es sencillo html
 	</body>
 </html>
